--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="afspraakSectie" style="display:none;">
     <label>Kies één of meer geplande datums:</label>
     <div id="datumCheckboxes"></div>
-    <button onclick="bevestigAfspraak()">📤 Bevestig en verzend</button>
+    <button type="button" onclick="bevestigAfspraak()">📤 Bevestig en verzend</button>
   </div>
 
   <div id="redenKeuze" style="display:none;">
