--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     label, button { margin: 10px 0; display: block; }
     #resultaat { margin-top: 15px; font-weight: bold; }
 
-    /* Modal stijl */
     #bevestigModal {
       display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       background-color: rgba(0, 0, 0, 0.5); z-index: 9999;
@@ -19,25 +18,27 @@
       background: white; padding: 20px; border-radius: 10px; max-width: 400px;
       text-align: center;
     }
-    #bevestigModalContent button {
-      margin: 5px;
-    }
+    #bevestigModalContent button { margin: 5px; }
 
-    /* Overlay na verzenden */
     #overlay {
       display: none;
-      position: fixed; top:0; left:0; width:100%; height:100%;
-      background: rgba(0,0,0,0.9);
-      color: white; font-size: 24px; font-weight: bold;
-      display: flex; justify-content: center; align-items: center;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: black;
+      color: white;
+      font-size: 24px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       z-index: 10000;
-      text-align: center;
-      padding: 20px;
     }
   </style>
 </head>
 <body>
-  <h2>Welkom bewoner</h2>
+  <div id="overlay">Bedankt voor uw reactie</div>
+
+  <h2 id="welkomText">Welkom bewoner</h2>
 
   <label for="houseNumber">Huisnummer:</label>
   <input type="text" id="houseNumber" readonly />
@@ -65,7 +66,6 @@
 
   <div id="resultaat"></div>
 
-  <!-- Modal -->
   <div id="bevestigModal">
     <div id="bevestigModalContent">
       <p id="modalText">Weet je zeker dat je deze datums wilt bevestigen?</p>
@@ -74,31 +74,36 @@
     </div>
   </div>
 
-  <!-- Overlay na verzenden -->
-  <div id="overlay">Bedankt voor uw reactie.</div>
-
   <script>
-    const scriptUrl = "https://script.google.com/macros/s/AKfycbyD_zWJADq8ck7-MNTaAHNUxlraGAtKTqv3nYSXV3UKDCEm1gJ5IMFOuTaXjWPlxLg-oQ/exec";
-
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbygdlIJjPq6qmjPJThGL_D0xVPf6CCogh8VCeQAFjZiw70hsMGn629Prow-QiySHtdARQ/exec";
     const huisnummer = new URLSearchParams(window.location.search).get("huisnummer");
-    if (huisnummer) {
-      document.getElementById("houseNumber").value = huisnummer;
-
-      // Ophalen straat en plaats en welkom tekst aanpassen
-      fetch(`${scriptUrl}?action=getAddressDetails&houseNumber=${encodeURIComponent(huisnummer)}`)
-        .then(response => response.json())
-        .then(data => {
-          if (data && data.straat && data.plaats) {
-            const welkomTekst = `Welkom bewoner van de ${data.straat} ${huisnummer}, ${data.plaats}`;
-            document.querySelector("h2").innerText = welkomTekst;
-          }
-        })
-        .catch(() => {
-          document.querySelector("h2").innerText = "Welkom bewoner";
-        });
-    }
-
     let gekozenDatums = [];
+
+    // Reset UI bij laden
+    window.addEventListener("load", () => {
+      document.getElementById("overlay").style.display = "none";
+      document.body.style.pointerEvents = "auto";
+      document.getElementById("afspraakSectie").style.display = "none";
+      document.getElementById("redenKeuze").style.display = "none";
+      document.getElementById("resultaat").innerText = "";
+      document.getElementById("datumCheckboxes").innerHTML = "";
+      document.getElementById("bevestigModal").style.display = "none";
+
+      if (huisnummer) {
+        document.getElementById("houseNumber").value = huisnummer;
+        fetch(`${scriptUrl}?action=getInfo&houseNumber=${encodeURIComponent(huisnummer)}`)
+          .then(r => r.json())
+          .then(data => {
+            const { straat, plaats } = data;
+            document.getElementById("welkomText").innerText =
+              `Welkom bewoner van de ${straat}, ${huisnummer}, ${plaats}`;
+          })
+          .catch(() => {
+            document.getElementById("welkomText").innerText =
+              `Welkom bewoner van huisnummer ${huisnummer}`;
+          });
+      }
+    });
 
     function kiesActie(type) {
       document.getElementById("resultaat").innerText = "";
@@ -118,7 +123,6 @@
         .then(data => {
           const container = document.getElementById("datumCheckboxes");
           container.innerHTML = "";
-
           data.forEach(date => {
             const checkbox = document.createElement("input");
             checkbox.type = "checkbox";
@@ -138,14 +142,9 @@
         .catch(() => alert("Fout bij ophalen van datums."));
     }
 
-    function bevestigAfspraak(event) {
-      if (event) event.preventDefault();
-
+    function bevestigAfspraak() {
       const checkboxes = document.querySelectorAll("#datumCheckboxes input[type='checkbox']");
-      gekozenDatums = [...checkboxes]
-        .filter(cb => cb.checked)
-        .map(cb => cb.value.trim())
-        .filter(d => d !== "");
+      gekozenDatums = [...checkboxes].filter(cb => cb.checked).map(cb => cb.value.trim());
 
       if (gekozenDatums.length === 0) {
         alert("Kies minstens één datum.");
@@ -163,16 +162,12 @@
 
     function verzendBevestiging() {
       sluitModal();
-
       const geselecteerdeDatums = gekozenDatums.join(",");
       const url = `${scriptUrl}?action=markAppointment&houseNumber=${encodeURIComponent(huisnummer)}&selectedDates=${encodeURIComponent(geselecteerdeDatums)}`;
 
       fetch(url)
         .then(r => r.text())
-        .then(msg => {
-          document.getElementById("resultaat").innerText = msg;
-          disableFormAndThank();
-        })
+        .then(() => toonBedanktOverlay())
         .catch(() => alert("Fout bij versturen afspraak."));
     }
 
@@ -181,23 +176,19 @@
       if (!reden) return alert("Kies een reden.");
 
       fetch(`${scriptUrl}?action=declineAppointment&houseNumber=${encodeURIComponent(huisnummer)}&reason=${encodeURIComponent(reden)}`)
-        .then(r => r.text())
-        .then(msg => {
-          document.getElementById("redenKeuze").style.display = "none";
-          document.getElementById("resultaat").innerText = msg;
-          disableFormAndThank();
-        })
+        .then(() => toonBedanktOverlay())
         .catch(() => alert("Fout bij versturen reden."));
     }
 
-    function disableFormAndThank() {
-      // Verberg alle knoppen en invoervelden door overlay te tonen
-      document.body.style.pointerEvents = "none"; // geen interactie meer mogelijk
+    function toonBedanktOverlay() {
       document.getElementById("overlay").style.display = "flex";
-
-      // Sluit de pagina automatisch na 5 seconden
+      document.body.style.pointerEvents = "none";
       setTimeout(() => {
-        window.close();
+        try {
+          window.close();
+        } catch (e) {
+          window.location.href = "https://www.google.com"; // Fallback als sluiten niet lukt
+        }
       }, 5000);
     }
   </script>
