--- a/index.html
+++ b/index.html
@@ -51,16 +51,6 @@
   <div id="afspraakSectie" style="display:none;">
     <label>Kies één of meer geplande datums:</label>
     <div id="datumCheckboxes"></div>
-
-    <label for="email">E-mailadres:</label>
-    <input type="email" id="email" placeholder="optioneel" />
-
-    <label for="telefoon">Telefoonnummer:</label>
-    <input type="tel" id="telefoon" placeholder="optioneel" />
-
-    <label for="opmerking">Opmerking:</label>
-    <textarea id="opmerking" placeholder="optioneel"></textarea>
-
     <button type="button" onclick="bevestigAfspraak()">📤 Bevestig en verzend</button>
   </div>
 
@@ -71,6 +61,16 @@
       <option value="Geen interesse">Geen interesse</option>
       <option value="Overleg nodig">Overleg nodig</option>
     </select>
+
+    <label for="emailDecline">E-mailadres:</label>
+    <input type="email" id="emailDecline" placeholder="optioneel" />
+
+    <label for="telefoonDecline">Telefoonnummer:</label>
+    <input type="tel" id="telefoonDecline" placeholder="optioneel" />
+
+    <label for="opmerkingDecline">Opmerking:</label>
+    <textarea id="opmerkingDecline" placeholder="optioneel"></textarea>
+
     <button onclick="submitReden()">Verstuur reden</button>
   </div>
 
@@ -85,8 +85,9 @@
   </div>
 
   <script>
-    const scriptUrl = "https://script.google.com/macros/s/AKfycbzETbzjBVgh2mV_tk0xezyJgkddIbGz2W_7cGcRWailANjRAeU86dGs0VSEVAgFldXh/exec";
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbyuT_lsKwdVcsAAXwZOoaR69hsVKdtLUoV4mPS6BYicdxErdFwphWR_YzksDeD617qH/exec";
 
+    // URL parameters ophalen: plaats, straat, huisnummer
     const urlParams = new URLSearchParams(window.location.search);
     const plaats = urlParams.get("plaats");
     const straat = urlParams.get("straat");
@@ -182,25 +183,10 @@
 
     function verzendBevestiging() {
       sluitModal();
-
       const geselecteerdeDatums = gekozenDatums.join(",");
-      const email = document.getElementById("email").value.trim();
-      const telefoon = document.getElementById("telefoon").value.trim();
-      const opmerking = document.getElementById("opmerking").value.trim();
+      const url = `${scriptUrl}?action=markAppointment&plaats=${encodeURIComponent(plaats)}&straat=${encodeURIComponent(straat)}&huisnummer=${encodeURIComponent(huisnummer)}&selectedDates=${encodeURIComponent(geselecteerdeDatums)}`;
 
-      const params = new URLSearchParams({
-        action: "markAppointment",
-        plaats,
-        straat,
-        huisnummer,
-        selectedDates: geselecteerdeDatums,
-      });
-
-      if (email) params.append("email", email);
-      if (telefoon) params.append("telefoon", telefoon);
-      if (opmerking) params.append("opmerking", opmerking);
-
-      fetch(`${scriptUrl}?${params.toString()}`)
+      fetch(url)
         .then(r => r.text())
         .then(() => toonBedanktOverlay())
         .catch(() => alert("Fout bij versturen afspraak."));
@@ -208,9 +194,25 @@
 
     function submitReden() {
       const reden = document.getElementById("redenSelect").value;
+      const email = document.getElementById("emailDecline").value.trim();
+      const telefoon = document.getElementById("telefoonDecline").value.trim();
+      const opmerking = document.getElementById("opmerkingDecline").value.trim();
+
       if (!reden) return alert("Kies een reden.");
 
-      fetch(`${scriptUrl}?action=declineAppointment&plaats=${encodeURIComponent(plaats)}&straat=${encodeURIComponent(straat)}&huisnummer=${encodeURIComponent(huisnummer)}&reason=${encodeURIComponent(reden)}`)
+      const params = new URLSearchParams({
+        action: "declineAppointment",
+        plaats,
+        straat,
+        huisnummer,
+        reason: reden,
+      });
+
+      if (email) params.append("email", email);
+      if (telefoon) params.append("telefoon", telefoon);
+      if (opmerking) params.append("opmerking", opmerking);
+
+      fetch(`${scriptUrl}?${params.toString()}`)
         .then(() => toonBedanktOverlay())
         .catch(() => alert("Fout bij versturen reden."));
     }
@@ -222,10 +224,13 @@
         try {
           window.close();
         } catch (e) {
-          window.location.href = "https://www.google.com";
+          window.location.href = "https://www.google.com"; // Fallback als sluiten niet lukt
         }
       }, 5000);
     }
   </script>
+</body>
+</html>
+
 </body>
 </html>
