--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
   <button onclick="kiesActie('afspraak')">✅ Afspraak maken</button>
   <button onclick="kiesActie('weigeren')">❌ Ik geef geen toestemming</button>
 
+  <!-- Nieuwe inputs altijd zichtbaar -->
+  <label for="email">E-mail:</label>
+  <input type="email" id="email" />
+
+  <label for="telefoon">Telefoonnummer:</label>
+  <input type="tel" id="telefoon" />
+
+  <label for="opmerking">Opmerking:</label>
+  <textarea id="opmerking" rows="3"></textarea>
+
   <div id="afspraakSectie" style="display:none;">
     <label>Kies één of meer geplande datums:</label>
     <div id="datumCheckboxes"></div>
@@ -61,16 +71,6 @@
       <option value="Geen interesse">Geen interesse</option>
       <option value="Overleg nodig">Overleg nodig</option>
     </select>
-
-    <label for="emailDecline">E-mailadres:</label>
-    <input type="email" id="emailDecline" placeholder="optioneel" />
-
-    <label for="telefoonDecline">Telefoonnummer:</label>
-    <input type="tel" id="telefoonDecline" placeholder="optioneel" />
-
-    <label for="opmerkingDecline">Opmerking:</label>
-    <textarea id="opmerkingDecline" placeholder="optioneel"></textarea>
-
     <button onclick="submitReden()">Verstuur reden</button>
   </div>
 
@@ -85,7 +85,7 @@
   </div>
 
   <script>
-    const scriptUrl = "https://script.google.com/macros/s/AKfycbwXEFM7lNnPO4BQqDTRu2Ga3CpOyzosPQTIMCn23f-FwDMW3Ht_MMS-S6dGkuxv_N-c/exec";
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbyuT_lsKwdVcsAAXwZOoaR69hsVKdtLUoV4mPS6BYicdxErdFwphWR_YzksDeD617qH/exec";
 
     // URL parameters ophalen: plaats, straat, huisnummer
     const urlParams = new URLSearchParams(window.location.search);
@@ -184,7 +184,12 @@
     function verzendBevestiging() {
       sluitModal();
       const geselecteerdeDatums = gekozenDatums.join(",");
-      const url = `${scriptUrl}?action=markAppointment&plaats=${encodeURIComponent(plaats)}&straat=${encodeURIComponent(straat)}&huisnummer=${encodeURIComponent(huisnummer)}&selectedDates=${encodeURIComponent(geselecteerdeDatums)}`;
+
+      const email = document.getElementById("email").value.trim();
+      const telefoon = document.getElementById("telefoon").value.trim();
+      const opmerking = document.getElementById("opmerking").value.trim();
+
+      const url = `${scriptUrl}?action=markAppointment&plaats=${encodeURIComponent(plaats)}&straat=${encodeURIComponent(straat)}&huisnummer=${encodeURIComponent(huisnummer)}&selectedDates=${encodeURIComponent(geselecteerdeDatums)}&email=${encodeURIComponent(email)}&telefoon=${encodeURIComponent(telefoon)}&opmerking=${encodeURIComponent(opmerking)}`;
 
       fetch(url)
         .then(r => r.text())
@@ -194,25 +199,13 @@
 
     function submitReden() {
       const reden = document.getElementById("redenSelect").value;
-      const email = document.getElementById("emailDecline").value.trim();
-      const telefoon = document.getElementById("telefoonDecline").value.trim();
-      const opmerking = document.getElementById("opmerkingDecline").value.trim();
-
       if (!reden) return alert("Kies een reden.");
 
-      const params = new URLSearchParams({
-        action: "declineAppointment",
-        plaats,
-        straat,
-        huisnummer,
-        reason: reden,
-      });
+      const email = document.getElementById("email").value.trim();
+      const telefoon = document.getElementById("telefoon").value.trim();
+      const opmerking = document.getElementById("opmerking").value.trim();
 
-      if (email) params.append("email", email);
-      if (telefoon) params.append("telefoon", telefoon);
-      if (opmerking) params.append("opmerking", opmerking);
-
-      fetch(`${scriptUrl}?${params.toString()}`)
+      fetch(`${scriptUrl}?action=declineAppointment&plaats=${encodeURIComponent(plaats)}&straat=${encodeURIComponent(straat)}&huisnummer=${encodeURIComponent(huisnummer)}&reason=${encodeURIComponent(reden)}&email=${encodeURIComponent(email)}&telefoon=${encodeURIComponent(telefoon)}&opmerking=${encodeURIComponent(opmerking)}`)
         .then(() => toonBedanktOverlay())
         .catch(() => alert("Fout bij versturen reden."));
     }
@@ -224,7 +217,7 @@
         try {
           window.close();
         } catch (e) {
-          window.location.href = "https://www.google.com"; // Fallback als sluiten niet lukt
+          window.location.href = "https://www.google.com"; // fallback als sluiten niet lukt
         }
       }, 5000);
     }
@@ -232,5 +225,4 @@
 </body>
 </html>
 
-</body>
 </html>
