--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
   </div>
 
   <div id="redenKeuze" style="display:none;">
-    <label>Waarom geen toestemming?</label>
+    <label>Waarom geeft u geen toestemming?</label>
     <select id="redenSelect">
-      <option value="Niet beschikbaar">Niet beschikbaar</option>
+      <option value="Niet beschikbaar op geplande datums">Niet beschikbaar op geplande datums</option>
       <option value="Geen interesse">Geen interesse</option>
-      <option value="Overleg nodig">Overleg nodig</option>
+      <option value="Graag overleg nodig">Graag overleg nodig</option>
     </select>
     <button onclick="submitReden()">Verstuur reden</button>
   </div>
