--- a/index.html
+++ b/index.html
@@ -105,17 +105,23 @@
 
       if (huisnummer && straat && plaats) {
         document.getElementById("huisnummer").value = huisnummer;
-        fetch(`${scriptUrl}?action=getAddressDetails&plaats=${encodeURIComponent(plaats)}&straat=${encodeURIComponent(straat)}&huisnummer=${encodeURIComponent(huisnummer)}`)
-          .then(r => r.json())
-          .then(data => {
-            if (!data.error) {
-              document.getElementById("welkomText").innerText =
-                `Welkom bewoner van de ${data.straat}, ${data.huisnummer}, ${data.plaats}`;
-            } else {
-              document.getElementById("welkomText").innerText =
-                `Welkom bewoner van huisnummer ${huisnummer}`;
-            }
-          })
+fetch(`${scriptUrl}?action=getAddressDetails&plaats=${encodeURIComponent(plaats)}&straat=${encodeURIComponent(straat)}&huisnummer=${encodeURIComponent(huisnummer)}`)
+  .then(r => r.json())
+  .then(data => {
+    if (!data.error) {
+      document.getElementById("welkomText").innerText =
+        `Welkom bewoner van de ${data.straat}, ${data.huisnummer}, ${data.plaats}`;
+      
+      // Vul de velden als er waarden beschikbaar zijn
+      if (data.email) document.getElementById("email").value = data.email;
+      if (data.telefoon) document.getElementById("telefoon").value = data.telefoon;
+      if (data.opmerking) document.getElementById("opmerking").value = data.opmerking;
+    } else {
+      document.getElementById("welkomText").innerText =
+        `Welkom bewoner van huisnummer ${huisnummer}`;
+    }
+  })
+
           .catch(() => {
             document.getElementById("welkomText").innerText =
               `Welkom bewoner van huisnummer ${huisnummer}`;
